delegate + protocol + f moi

--- a/caughtnbowled/Main.storyboard
+++ b/caughtnbowled/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C53a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2659" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -1113,7 +1113,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Vn-ic-Tbs">
-                                        <rect key="frame" x="233" y="9.5" width="42" height="21"/>
+                                        <rect key="frame" x="233" y="10" width="42" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -1145,37 +1145,87 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qav-B4-wTO">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ChO-iy-Ot8">
                                 <rect key="frame" x="16" y="125" width="343" height="442"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="menuCell" id="FQw-l8-Bgf">
-                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FQw-l8-Bgf" id="AqR-ie-cSM">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="Wcc-Zy-JFs" id="yee-QS-fs3"/>
-                                    <outlet property="delegate" destination="Wcc-Zy-JFs" id="zYb-gX-4Tm"/>
-                                </connections>
-                            </tableView>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qav-B4-wTO">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="442"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="menuCell" id="FQw-l8-Bgf" customClass="MenuCell" customModule="Bowled" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="28" width="343" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FQw-l8-Bgf" id="AqR-ie-cSM">
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHp-1V-JrY" customClass="PulseView" customModule="Material">
+                                                            <rect key="frame" x="5" y="5" width="333" height="33.5"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QxP-xj-OQk">
+                                                                    <rect key="frame" x="3" y="0.0" width="42" height="30.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstItem="QxP-xj-OQk" firstAttribute="leading" secondItem="OHp-1V-JrY" secondAttribute="leading" constant="5" id="g3W-dR-vgi"/>
+                                                                <constraint firstAttribute="bottom" secondItem="QxP-xj-OQk" secondAttribute="bottom" constant="5" id="icS-5t-bsI"/>
+                                                                <constraint firstItem="QxP-xj-OQk" firstAttribute="top" secondItem="OHp-1V-JrY" secondAttribute="top" constant="5" id="wHl-89-3ui"/>
+                                                            </constraints>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
+                                                                    <color key="value" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </view>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="OHp-1V-JrY" firstAttribute="top" secondItem="AqR-ie-cSM" secondAttribute="top" constant="5" id="PjL-Z3-fUG"/>
+                                                        <constraint firstAttribute="trailing" secondItem="OHp-1V-JrY" secondAttribute="trailing" constant="5" id="QbS-Je-HrT"/>
+                                                        <constraint firstAttribute="bottom" secondItem="OHp-1V-JrY" secondAttribute="bottom" constant="5" id="e2n-qS-28C"/>
+                                                        <constraint firstItem="OHp-1V-JrY" firstAttribute="leading" secondItem="AqR-ie-cSM" secondAttribute="leading" constant="5" id="k7k-e8-h73"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="menuLabel" destination="QxP-xj-OQk" id="tzg-X1-yr1"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="Wcc-Zy-JFs" id="yee-QS-fs3"/>
+                                            <outlet property="delegate" destination="Wcc-Zy-JFs" id="zYb-gX-4Tm"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="qav-B4-wTO" secondAttribute="trailing" id="1Gz-9T-6je"/>
+                                    <constraint firstItem="qav-B4-wTO" firstAttribute="top" secondItem="ChO-iy-Ot8" secondAttribute="top" id="Sh7-xX-619"/>
+                                    <constraint firstAttribute="bottom" secondItem="qav-B4-wTO" secondAttribute="bottom" id="cJp-u2-SCu"/>
+                                    <constraint firstItem="qav-B4-wTO" firstAttribute="leading" secondItem="ChO-iy-Ot8" secondAttribute="leading" id="tEr-nh-Y3Y"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="HjG-uw-XjV" firstAttribute="trailing" secondItem="5ue-qy-Z10" secondAttribute="trailingMargin" id="1hw-bC-Fr1"/>
-                            <constraint firstItem="qav-B4-wTO" firstAttribute="leading" secondItem="5ue-qy-Z10" secondAttribute="leadingMargin" id="8nn-It-lV3"/>
-                            <constraint firstItem="Ier-Uo-lXy" firstAttribute="top" secondItem="qav-B4-wTO" secondAttribute="bottom" constant="100" id="G1R-qr-fwy"/>
                             <constraint firstItem="NK6-os-8bY" firstAttribute="trailing" secondItem="5ue-qy-Z10" secondAttribute="trailingMargin" id="HJx-re-GCA"/>
                             <constraint firstItem="HjG-uw-XjV" firstAttribute="leading" secondItem="5ue-qy-Z10" secondAttribute="leadingMargin" id="LaD-Ay-NwV"/>
-                            <constraint firstItem="qav-B4-wTO" firstAttribute="top" secondItem="HjG-uw-XjV" secondAttribute="bottom" id="Oic-k4-H2O"/>
+                            <constraint firstItem="ChO-iy-Ot8" firstAttribute="trailing" secondItem="5ue-qy-Z10" secondAttribute="trailingMargin" id="Q2Z-cG-THL"/>
+                            <constraint firstItem="ChO-iy-Ot8" firstAttribute="top" secondItem="HjG-uw-XjV" secondAttribute="bottom" id="Szz-7k-Hyb"/>
                             <constraint firstItem="NK6-os-8bY" firstAttribute="leading" secondItem="5ue-qy-Z10" secondAttribute="leadingMargin" id="X6L-ad-7Zv"/>
+                            <constraint firstItem="Ier-Uo-lXy" firstAttribute="top" secondItem="ChO-iy-Ot8" secondAttribute="bottom" constant="100" id="XbP-ah-Jsu"/>
                             <constraint firstItem="NK6-os-8bY" firstAttribute="top" secondItem="EYF-Vu-Qv5" secondAttribute="bottom" constant="20" id="bsS-8O-TpL"/>
                             <constraint firstItem="HjG-uw-XjV" firstAttribute="top" secondItem="NK6-os-8bY" secondAttribute="bottom" constant="5" id="hmG-Vu-dQR"/>
-                            <constraint firstItem="qav-B4-wTO" firstAttribute="trailing" secondItem="5ue-qy-Z10" secondAttribute="trailingMargin" id="o3Q-c1-NUR"/>
+                            <constraint firstItem="ChO-iy-Ot8" firstAttribute="leading" secondItem="5ue-qy-Z10" secondAttribute="leadingMargin" id="uMO-va-Jvg"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1187,7 +1237,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G1L-bu-8cy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-810.39999999999998" y="169.56521739130437"/>
+            <point key="canvasLocation" x="-2284" y="-155.17241379310346"/>
         </scene>
         <!--Filter Menu Controller-->
         <scene sceneID="AyQ-36-h6y">
